2007-10-08  Stefan Siegl  <stesie@brokenpipe.de>

	[task #5470: ``Implement pfinet6'']

	* config.h (CONFIG_IPV6, CONFIG_IPV6_EUI64): New defines, 
	set to 1.
	* Makefile (ipv6-srcs): New variable.
	(LINUXSRCS): Add ipv6-srcs.
	
	* ethernet.c (ethernet_demuxer): Call skb_put instead of changing
	skb->len directly, and thus now update skb->tail accordingly.
	* pfinet.h (PORTCLASS_INET, PORTCLASS_INET6): New enums.
	(trivfs_protid_portclasses, trivfs_protid_nportclasses)
	(trivfs_cntl_portclasses, trivfs_cntl_nportclasses): Declare
	these.
	(pfinet_bootstrap_portclass): New variable.
	(pfinet_bind): New function.
	* main.c: Define _HACK_ERRNO_H.  Include <errno.h>.  
	(trivfs_protid_portclasses, trivfs_cntl_portclasses): New slots
	for PORTCLASS_INET6.
	(trivfs_protid_nportclasses, trivfs_cntl_nportclasses): Set to 2.
	(pfinet_bootstrap_portclass): New variable.
	(pfinet_bind): New function.
	(pfinet_activate_ipv6) [CONFIG_IPV6]: New function.
	(main) [CONFIG_IPV6]: Call inet6_proto_init.
	(main): Reordered to allow pfinet to not be started as a
	translator, if pfinet_bind is used.  If started as a translator,
	treat pfinet_bootstrap_portclass when calling trivfs_startup.
	* options.c: Include <net/sock.h>, <net/ip6_fib.h>,
	<net/ip6_route.h> and <net/addrconf.h>. 
	(options): New option `ipv4'.
	(options) [CONFIG_IPV6]: New options `ipv6', `address6' and
	`gateway6'.
	(parse_interface) [CONFIG_IPV6]: Add address6 and gateway6.
	(parse_hook_add_interface) [CONFIG_IPV6]: Initialize address6 and
	gateway6. 
	(parse_opt): Parse new args.
	* socket-ops.c (S_socket_create): Call either
	net_families[PF_INET]->create or net_families[PF_INET6]->create,
	depending on receiving master.
	(S_socket_create_address): Allow creation of AF_INET6 addresses.
	
	* glue-include/asm/delay.h: New stub file.
	* glue-include/linux/ipv6.h: Merged many bits unmodified from Linux
	header file.
	* glue-include/linux/in6.h: Likewise.
	(ipv6mr_ifindex): New define, glue to ipv6mr_interface. 